fix view on small screen

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -33,7 +33,7 @@ body.login-body {
     max-width: 500px;
 }
 
-.menu {
+.main-menu {
     background-color: #003D5E;
     grid-area: menu;
     display: flex;
@@ -262,11 +262,11 @@ input {
         padding: 20px 0;
     }
 
-    .menu.opened {
+    .main-menu.opened {
         transform: translateX(0);
     }
 
-    .menu {
+    .main-menu {
         transform: translateX(-180px);
         position: absolute;
         bottom: 0;
